<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="description_post_is_sent" translatable="false">Is sent</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_resend">Resend</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="no_network_exception" translatable="false">No network exception</string>
    <string name="unknown_exception" translatable="false">Unknown exception</string>
    <string name="refresh">Refresh</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="authorisation_introduction">Enter your login and password:</string>
    <string name="login">Login</string>
    <string name="pass">Pass</string>
    <string name="confirm_pass">Confirm pass</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="pass_different">Passwords does not match</string>
    <string name="msg_logoff">Do you logoff?</string>
    <string name="dialog_accept">Yes</string>
    <string name="dialog_decline">No</string>
    <string name="remove">Remove</string>
    <string name="some_text">Some text</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="more_old">More old</string>
</resources>